# syv-flet

./: .antigravityignore  .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  PRD.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.agent/: README.md
.agent/docs/: PRD.md
.agent/skills/configuration-management/: example-config.yaml
.agent/skills/dev-environment/: SKILL.md
.agent/skills/git-workflow/: SKILL.md
.agent/skills/hex-grid-flet-rendering/: SKILL.md
.agent/skills/state-machine/: SKILL.md
.agent/skills/testing-framework/: SKILL.md
.agent/skills/ux-ui-flet-rendering/: SKILL.md
.claude/: INDEX.md  README.md  settings.json
.claude/agents/: code-reviewer.md  flet-ui-builder.md  hex-engine-developer.md  test-writer.md
.claude/docs/: 01-flet-architecture.md  02-development-guide.md  03-code-standards.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  REQUIREMENTS.md  STATES.md  WORKFLOW.md  hexagonal-grid-coordinates.md
.claude/hooks/: format-file.py  protect-files.py  validate-command.py
.claude/skills/assets-manager/: SKILL.md
.claude/skills/board-implementation/: SKILL.md
.claude/skills/board-implementation/scripts/: validate-board.py
.claude/skills/code-standards/: SKILL.md
.claude/skills/code-standards-review/: SKILL.md
.claude/skills/configuration-management/: SKILL.md  example-config.yaml
.claude/skills/cycle-tap-mechanism/: SKILL.md
.claude/skills/dev-environment/: SKILL.md
.claude/skills/fix-gaps/: SKILL.md  checklist.yaml  feedback.md
.claude/skills/hex-grid-flet-rendering/: SKILL.md
.claude/skills/hex-grid-math/: SKILL.md
.claude/skills/hex-grid-rendering/: SKILL.md
.claude/skills/hexagonal-grid-ui-ux/: SKILL.md
.claude/skills/logging/: SKILL.md
.claude/skills/state-machine/: SKILL.md
.claude/skills/testing-framework/: SKILL.md
.claude/skills/user-authentication/: SKILL.md
.claude/skills/ux-ui-flet-rendering/: SKILL.md
src/: __init__.py  example_logging.py  logging_config.py
src/syv_flet/: __init__.py  logging_config.py
